--- a/views/explore.jade
+++ b/views/explore.jade
@@ -6,7 +6,7 @@ html(lang=en)
 		script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
 		script(type='text/javascript', src='/explore.js')
 	body
-		h1 Tile explorer:
+		h1 Dekorum tile explorer:
 	#elblocko
 		#namesWrap
 			label.radio.inline
