--- a/static/explore.css
+++ b/static/explore.css
@@ -36,3 +36,12 @@ body {
 #daimg {
 	border: solid black 1px;
 }
+
+#throbber {
+	width: 40px; height: 40px;
+	display: none;
+	float: left;
+	position: fixed;
+	left: 360px;
+	top: 15px;
+}
