--- a/views/explore.jade
+++ b/views/explore.jade
@@ -7,6 +7,12 @@ html(lang=en)
 		script(type='text/javascript', src='/explore.js')
 	body
 		img#throbber(src='/throbber.gif')
+		#palette
+			#pcolor1.pcolor
+			#pcolor2.pcolor
+			#pcolor3.pcolor
+			#pcolor4.pcolor
+			#pcolor5.pcolor
 		h1 Dekorum tile explorer:
 	#elblocko
 		#namesWrap
