--- a/views/explore.jade
+++ b/views/explore.jade
@@ -13,6 +13,7 @@ html(lang=en)
 			#pcolor3.pcolor
 			#pcolor4.pcolor
 			#pcolor5.pcolor
+		#entropy
 		h1 Dekorum tile explorer:
 	#elblocko
 		#namesWrap
