--- a/views/explore.jade
+++ b/views/explore.jade
@@ -5,6 +5,7 @@ html(lang=en)
 		link(rel='stylesheet', href='/explore.css')
 		script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
 		script(type='text/javascript', src='/explore.js')
+		script(type='text/javascript', src='/colors.js')
 	body
 		img#throbber(src='/throbber.gif')
 		#palette
