--- a/static/explore.css
+++ b/static/explore.css
@@ -37,23 +37,24 @@ body {
 	border: solid black 1px;
 }
 
+#hdwrap {
+	display: inline-block;
+	width: 800px;
+	height: 40px;
+	vertical-align: top;
+	padding-left: 10px;
+}
+
 #throbber {
 	width: 40px; height: 40px;
 	display: none;
-	float: left;
-	position: fixed;
-	left: 360px;
-	top: 15px;
 }
 
 #palette {
-	position: fixed;
-	left: 420px;
-	top: 15px;
-	height: 40px;
-	width: 430px;
+	height: 36px;
+	width: 750px;
 	border: solid silver 1px;
-	padding: 5px;
+	padding-left: 5px;
 	display: none;
 }
 
@@ -66,8 +67,9 @@ body {
 }
 
 #entropy {
-	position: fixed;
-	left: 890px;
 	font-size: 18px;
-	top: 30px;
+	display: inline-block;
+	vertical-align: top;
+	margin-top: 8px;
+	padding-left: 8px;
 }
