--- a/views/explore.jade
+++ b/views/explore.jade
@@ -7,15 +7,16 @@ html(lang=en)
 		script(type='text/javascript', src='/explore.js')
 		script(type='text/javascript', src='/colors.js')
 	body
-		img#throbber(src='/throbber.gif')
-		#palette
-			#pcolor1.pcolor
-			#pcolor2.pcolor
-			#pcolor3.pcolor
-			#pcolor4.pcolor
-			#pcolor5.pcolor
-		#entropy
 		h1 Dekorum tile explorer:
+			#hdwrap
+				img#throbber(src='/throbber.gif')
+				#palette
+					#pcolor1.pcolor
+					#pcolor2.pcolor
+					#pcolor3.pcolor
+					#pcolor4.pcolor
+					#pcolor5.pcolor
+					#entropy
 	#elblocko
 		#namesWrap
 			label.radio.inline
